// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfilePicInline component > should render correctly - no profile pic found 1`] = `
<div>
  <img
    alt="Sample Name"
    class="ml-2 mb-0 rounded-full"
    height="30"
    src="/images/authors/foo.jpg"
    width="30"
  />
</div>
`;

exports[`ProfilePicInline component > should render correctly 1`] = `
<div>
  <img
    alt="Sample Name"
    class="ml-2 mb-0 rounded-full"
    height="30"
    src="/images/authors/pmc.jpg"
    width="30"
  />
</div>
`;
